@@ -1,5 +1,6 @@
 INCLUDES = \
 	$(ANJUTA_CFLAGS)\
+	-I$(top_srcdir)\
 	-I$(top_srcdir)/src \
 	-I$(srcdir)/../scintilla/include \
 	-I$(srcdir)/../tagmanager/include \
