@@ -1,3 +1,6 @@
+2003-05-07  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
+	* gdl/Makefile.am, printing/Makefile.am: distcheck fixes.
+
 2003-05-06  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
 	* scripts/anjuta_import.sh.in, src/defaults.c, src/project_dbase_gui.c
 	, tagmanager/c.c: Support for ProC and RDB files.
